/**
 * Copyright 2024 RAW Labs S.A.
 * All rights reserved.
 *
 * This source code is the property of RAW Labs S.A. It contains
 * proprietary and confidential information that is protected by applicable
 * intellectual property and other laws. Unauthorized use, reproduction,
 * or distribution of this code, or any portion of it, may result in severe
 * civil and criminal penalties and will be prosecuted to the maximum
 * extent possible under the law.
 */

syntax = "proto3";

option java_package = "com.rawlabs.protocol.raw";
option java_multiple_files = true;

package com.rawlabs.protocol.raw;

message Value {
  oneof value {
    ValueNull null = 2;
    ValueByte byte = 4;
    ValueShort short = 5;
    ValueInt int = 6;
    ValueLong long = 7;
    ValueFloat float = 8;
    ValueDouble double = 9;
    ValueDecimal decimal = 10;
    ValueBool bool = 11;
    ValueString string = 12;
    ValueBinary binary = 13;
    ValueDate date = 15;
    ValueTime time = 16;
    ValueTimestamp timestamp = 17;
    ValueInterval interval = 18;
  }
}

message ValueNull {}

message ValueByte {
  int32 v = 1;
}

message ValueShort {
  int32 v = 1;
}

message ValueInt {
  int32 v = 1;
}

message ValueLong {
  int64 v = 1;
}

message ValueFloat {
  float v = 1;
}

message ValueDouble {
  double v = 1;
}

message ValueDecimal {
  string v = 1;
}

message ValueBool {
  bool v = 1;
}

message ValueString {
  string v = 1;
}

message ValueBinary {
  bytes v = 1;
}

message ValueDate {
  int32 year = 1;
  int32 month = 2;
  int32 day = 3;
}

message ValueTime {
  int32 hour = 1;
  int32 minute = 2;
  int32 second = 3;
  int32 nano = 4;
}

message ValueTimestamp {
  int32 year = 1;
  int32 month = 2;
  int32 day = 3;
  int32 hour = 4;
  int32 minute = 5;
  int32 second = 6;
  int32 nano = 7;
}

message ValueInterval {
  int32 years = 1;
  int32 months = 2;
  int32 weeks = 3;
  int32 days = 4;
  int32 hours = 5;
  int32 minutes = 6;
  int32 seconds = 7;
  int32 millis = 8;
}
